--- a/website/package.json
+++ b/website/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "lodash": "^4.17.21",
     "register-service-worker": "^1.7.1",
     "socket.io-client": "^3.1.0",
     "vue": "^3.0.0",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^2.0.0-beta.3",
+    "@types/lodash": "^4.14.168",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
